unpackaged/objects/BrainEngine_Deployment__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>BE_Release__c</referenceTo>
        <relationshipLabel>BrainEngine Deployments</relationshipLabel>
        <relationshipName>BrainEngine_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <label>Success</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BrainEngine Deployment</label>
    <nameField>
        <label>BrainEng Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BrainEngine Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>